music table tested and works for tablet/mobile resolution

--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -110,15 +110,31 @@
                                 <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank"> "I'm a Believer"</href>
                         </td>
                         <td class="music-col">
-                            <img src="../assets/images/more_of_monkees.jpg" class="pull-left" title="More of the Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank"> "I'm a Believer"</href>
+                            <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Daydream Believer"</href>
+
                         </td>
                         <td class="music-col">
-                            <img src="../assets/images/more_of_monkees.jpg" class="pull-left" title="More of the Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank"> "I'm a Believer"</href>
+                            <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image"></img>
+                                 <a class="album-song" href="#0" > "Valleri"</href>
                         </td>
                     </tr>
                 </table>
+                </div>
+                
+                <div class="music-table-mobile">
+                    <div class="dropdown">
+                        <button class="dropbtn">1966</button>
+                        <div class="dropdown-content">
+                            <a href="#">"I'm a Believer"</a>
+                            <a href="#">"I'm a Believer"</a>
+                        </div>
+                        <button class="dropbtn">1967</button>
+                        <div class="dropdown-content">
+                            <a href="#">"I'm a Believer"</a>
+                            <a href="#">"I'm a Believer"</a>
+                        </div>
+                    </div>
                 </div>
               <!-- end of div -->    
             </div>
