--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -116,7 +116,91 @@
                         </td>
                         <td class="music-col">
                             <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image"></img>
-                                 <a class="album-song" href="#0" > "Valleri"</href>
+                                <a class="album-song" href="#0" > "Valleri"</href>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="music-col">
+                            <img src="../assets/images/monkees_albumcover.jpg" class="pull-left" title="The Monkees" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "Last Train to Clarksville"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_pacj.jpg" class="pull-left" title="Pisces, Aquarius, Capricorn & Jones Ltd" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Pleasant Valley Sunday"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_head.jpg" class="pull-left" title="Head" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "The Purpoise Song"</href>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>1969</th>
+                        <th>1970</th>
+                        <th>1987</th>
+                    </tr>
+                    <tr>
+                        <td class="music-col">
+                            <img src="../assets/images/Monkees_present.png" class="pull-left" title="The Monkees Present" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Good Clean Fun"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "I Love you Better"</href>
+
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "Heart and Soul"</href>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_instant_replay.jpg" class="pull-left" title="Instant Replay" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Tear Drop City"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Oh My My"</href>
+
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "(I'd Go The) Whole Wide World"</href>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>1996</th>
+                        <th>2016</th>
+                        <th>Christmas Party</th>
+                    </tr>
+                    <tr>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Never Enough"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Good Times"</href>
+
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Wonderful Christmastime"</href>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "You and I"</href>
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Love to Love"</href>
+
+                        </td>
+                        <td class="music-col">
+                            <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
+                                <a class="album-song" href="#0" > "Silver Bell"</href>
                         </td>
                     </tr>
                 </table>
