music youtube links in desktop/smaller resolutions have been tested and are linked correctly

--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -111,32 +111,38 @@
                         <th>1968</th>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/more_of_monkees.jpg" class="pull-left" title="More of the Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank"> "I'm a Believer"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank">
+                                <img src="../assets/images/more_of_monkees.jpg" class="pull-left" title="More of the Monkees" alt="Monkees album cover image">
+                                    <p>"I'm a Believer"</p></a>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Daydream Believer"</href>
-
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=xvqeSJlgaNk" target="_blank">
+                                <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image">
+                                    <p>"Daydream Believer"</p></href>
+                    
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Valleri"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=QWTa9CE51sA" target="_blank">
+                                <img src="../assets/images/mon_the_birds.jpg" class="pull-left" title="The Birds the Bees and the Monkees" alt="Monkees album cover image">
+                                    <p>"Valleri"</p></href>
                         </td>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/monkees_albumcover.jpg" class="pull-left" title="The Monkees" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "Last Train to Clarksville"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=ud2mvXZR470" target="_blank" >
+                                <img src="../assets/images/monkees_albumcover.jpg" class="pull-left" title="The Monkees" alt="Monkees album cover image">
+                                    <p>"Last Train to Clarksville"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_pacj.jpg" class="pull-left" title="Pisces, Aquarius, Capricorn & Jones Ltd" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Pleasant Valley Sunday"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=klU01gYb6F0" target="_blank">
+                                <img src="../assets/images/mon_pacj.jpg" class="pull-left" title="Pisces, Aquarius, Capricorn & Jones Ltd" alt="Monkees album cover image">
+                                    <p>"Pleasant Valley Sunday"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_head.jpg" class="pull-left" title="Head" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "The Purpoise Song"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=sezVApK9rTk" target="_blank">
+                                <img src="../assets/images/mon_head.jpg" class="pull-left" title="Head" alt="Monkees album cover image">
+                                    <p>"The Purpoise Song"</p></href>
                         </td>
                     </tr>
                     <tr>
@@ -145,33 +151,39 @@
                         <th>1987</th>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/Monkees_present.png" class="pull-left" title="The Monkees Present" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Good Clean Fun"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=-Gmgz2tqJEU" target="_blank">
+                                <img src="../assets/images/Monkees_present.png" class="pull-left" title="The Monkees Present" alt="Monkees album cover image">
+                                    <p>"Good Clean Fun"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "I Love you Better"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=MNGVNa6jfws" target="_blank">
+                                <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image">
+                                    <p>"I Love you Better"</p></href>
 
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "Heart and Soul"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=mo7cBvd62Uw" target="_blank">
+                                <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image">
+                                    <p>"Heart and Soul"</p></href>
                         </td>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_instant_replay.jpg" class="pull-left" title="Instant Replay" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Tear Drop City"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=UkK8sDWFdTI" target="_blank">
+                                <img src="../assets/images/mon_instant_replay.jpg" class="pull-left" title="Instant Replay" alt="Monkees album cover image">
+                                    <p>"Tear Drop City"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Oh My My"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=y8fkCHt4wA0" target="_blank">
+                                <img src="../assets/images/monkees_changes.jpg" class="pull-left" title="Changes" alt="Monkees album cover image">
+                                    <p>"Oh My My"</p></href>
 
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank" > "(I'd Go The) Whole Wide World"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=sZcO_6L7Ubk" target="_blank">
+                                <img src="../assets/images/mon_poolit.jpg" class="pull-left" title="Pool It" alt="Monkees album cover image"></img>
+                                    <p>"(I'd Go The) Whole Wide World"</p></href>
                         </td>
                     </tr>
                     <tr>
@@ -180,33 +192,39 @@
                         <th>Christmas Party</th>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Never Enough"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=GJf42h3wdLM" target="_blank">
+                                <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
+                                    <p>"Never Enough"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Good Times"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=QxptjN_HxZs" target="_blank">
+                                <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
+                                    <p>"Good Times"</p></href>
 
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Wonderful Christmastime"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=paPdzPSCwTY" target="_blank">
+                                <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
+                                    <p>"Wonderful Christmastime"</p></href>
                         </td>
                     </tr>
                     <tr>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "You and I"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=zfZifyxc9r0" target="_blank">
+                                <img src="../assets/images/mon_justus.jpg" class="pull-left" title="Justus" alt="Monkees album cover image"></img>
+                                    <p>"You and I"</p></href>
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Love to Love"</href>
+                        <td class="music-col class-1">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=b98acgLiwd8" target="_blank">
+                                <img src="../assets/images/mon_gtimes.jpg" class="pull-left" title="Good Times" alt="Monkees album cover image"></img>
+                                    <p>"Love to Love"</p></href>
 
                         </td>
-                        <td class="music-col">
-                            <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
-                                <a class="album-song" href="#0" > "Silver Bell"</href>
+                        <td class="music-col class-2">
+                            <a class="album-song" href="https://www.youtube.com/watch?v=JeiG3eGOnxU" target="_blank">
+                                <img src="../assets/images/mon_xmas.jpg" class="pull-left" title="Christmas Party" alt="Monkees album cover image"></img>
+                                    <p>"Silver Bells"</p></href>
                         </td>
                     </tr>
                 </table>
@@ -216,64 +234,64 @@
                     <div class="dropdown">
                         <button class="dropbtn">1966</button>
                         <div class="dropdown-content">
-                            <a href="#">"I'm a Believer"</a>
-                            <a href="#">"Last Train to Clarksville"</a>
+                            <a href="https://www.youtube.com/watch?v=W83InivbUSQ" target="_blank">"I'm a Believer"</a>
+                            <a href="https://www.youtube.com/watch?v=ud2mvXZR470" target="_blank">"Last Train to Clarksville"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1967</button>
                         <div class="dropdown-content">
-                            <a href="#">"Daydream Believer"</a>
-                            <a href="#">"Pleasant Valley Sunday"</a>
+                            <a href="https://www.youtube.com/watch?v=xvqeSJlgaNk" target="_blank">"Daydream Believer"</a>
+                            <a href="https://www.youtube.com/watch?v=klU01gYb6F0" target="_blank">"Pleasant Valley Sunday"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1968</button>
                         <div class="dropdown-content">
-                            <a href="#">"Valleri"</a>
-                            <a href="#">"The Purpoise Song"</a>
+                            <a href="https://www.youtube.com/watch?v=QWTa9CE51sA" target="_blank">"Valleri"</a>
+                            <a href="https://www.youtube.com/watch?v=sezVApK9rTk" target="_blank">"The Purpoise Song"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1969</button>
                         <div class="dropdown-content">
-                            <a href="#">"Good Clean Fun"</a>
-                            <a href="#">"Tear Drop City"</a>
+                            <a href="https://www.youtube.com/watch?v=-Gmgz2tqJEU" target="_blank">"Good Clean Fun"</a>
+                            <a href="https://www.youtube.com/watch?v=UkK8sDWFdTI" target="_blank">"Tear Drop City"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1970</button>
                         <div class="dropdown-content">
-                            <a href="#">"I Love You Better"</a>
-                            <a href="#">"Oh My My"</a>
+                            <a href="https://www.youtube.com/watch?v=MNGVNa6jfws" target="_blank">"I Love You Better"</a>
+                            <a href="https://www.youtube.com/watch?v=y8fkCHt4wA0" target="_blank">"Oh My My"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1987</button>
                         <div class="dropdown-content">
-                            <a href="#">"Heart and Soul"</a>
-                            <a href="#">"(I'd Go The) Whole Wide World"</a>
+                            <a href="https://www.youtube.com/watch?v=mo7cBvd62Uw" target="_blank">"Heart and Soul"</a>
+                            <a href="https://www.youtube.com/watch?v=sZcO_6L7Ubk" target="_blank">"(I'd Go The) Whole Wide World"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">1996</button>
                         <div class="dropdown-content">
-                            <a href="#">"Never Enough"</a>
-                            <a href="#">"You and I"</a>
+                            <a href="https://www.youtube.com/watch?v=GJf42h3wdLM" target="_blank">"Never Enough"</a>
+                            <a href="https://www.youtube.com/watch?v=zfZifyxc9r0" target="_blank">"You and I"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">2016</button>
                         <div class="dropdown-content">
-                            <a href="#">"Good Times"</a>
-                            <a href="#">"Love to Love"</a>
+                            <a href="https://www.youtube.com/watch?v=QxptjN_HxZs" target="_blank">"Good Times"</a>
+                            <a href="https://www.youtube.com/watch?v=b98acgLiwd8" target="_blank">"Love to Love"</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Xmas Party</button>
                         <div class="dropdown-content">
-                            <a href="#">"Wonderful Christmastime"</a>
-                            <a href="#">"Silver Bell"</a>
+                            <a href="https://www.youtube.com/watch?v=paPdzPSCwTY" target="_blank">"Wonderful Christmastime"</a>
+                            <a href="https://www.youtube.com/watch?v=JeiG3eGOnxU" target="_blank">"Silver Bell"</a>
                         </div>
                     </div>
                 </div>
