--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -62,14 +62,15 @@
                     </div>
                     <div class="container text-box">
                         <h1>The Monkees</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                            dolor in hendrerit in vulputate velit esse molestie consequat,
-                            vel illum dolore eu feugiat nulla facilisis at vero eros et
-                            accumsan et iusto .</p>
+                            <p>For over 50 years we have performed all over the world performing your most
+                            loved hits!  This fan site is dedicated to all our old and new friends who want
+                            instant access to our hits from the 60's to now.  Whether you are at home of on the go, 
+                            you will never be far from listening to your favourite songs!</p>
+                            <p>To stay up to date with our latest developments check out our facebook, youtube and twitter 
+                            accounts.  We are currently taking event bookings, whether it be for private or business, and right now 
+                            you can book yourself our special "Monkees Christmas Party" where we will perform our latest album "
+                            Christmas Party".</p>
+                            <p><span class="event-tag">BOOK EVENT</span></p>
                     </div>
                     <div class="container circle-images">
                         <img src="../assets/images/mickey.jpg"></img>
