music section styling complete - ready to start events section

--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -61,16 +61,14 @@
                         <img src="../assets/images/Tork.jpg"></img>
                     </div>
                     <div class="container text-box">
-                        <h1>The Monkees</h1>
+                        <img src="../assets/images/monkees-logo.png">
                             <p>For over 50 years we have performed all over the world performing your most
                             loved hits!  This fan site is dedicated to all our old and new friends who want
-                            instant access to our hits from the 60's to now.  Whether you are at home of on the go, 
+                            instant access to our hits from the 60's till now.  Whether you are at home or on the go, 
                             you will never be far from listening to your favourite songs!</p>
-                            <p>To stay up to date with our latest developments check out our facebook, youtube and twitter 
-                            accounts.  We are currently taking event bookings, whether it be for private or business, and right now 
-                            you can book yourself our special "Monkees Christmas Party" where we will perform our latest album "
-                            Christmas Party".</p>
-                            <p><span class="event-tag">BOOK EVENT</span></p>
+                            <p>Check out our social media accounts for current news, and dont forget that we are
+                            now taking private booking events.  We cater for various business and private events, and we 
+                            are currently are taking bookings for this Christmas where we will perform our latest album - "The Christmas Party" </p>
                     </div>
                     <div class="container circle-images">
                         <img src="../assets/images/mickey.jpg"></img>
@@ -98,10 +96,11 @@
         
             <div class="background music">
                 <div class="music-table-text">
-                <h2> About the Music</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
-                    ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit
-                    augue duis .
+                <h2>The Monkees Dukebox</h2>
+                <p>We have compiled a small selection of our most loved hits from over the years.
+                Whether you are at home or on the go, you will always have quick access to our music
+                videos!  If you are interested in booking a Xmas event with us, feel free to check out
+                two of our playlist hits, "Wonderful Christmastime" and "Silver Bells".  
                 </p>
                 </div>
                 <div class="music-table">
