change of text content in music section

--- a/mock-header/mh.html
+++ b/mock-header/mh.html
@@ -94,7 +94,7 @@
             <div class="background music">
                 <div class="music-table-text">
                     <h2>The Monkees Music</h2>
-                    <p>We have compiled a small selection of our most loved hits from over the years. Whether you are at home or on the go, you will always have quick access to our music videos! If you are interested in booking a Xmas event with us, feel free to check
+                    <p>We have compiled a small selection of our most loved hits from over the years. To watch our music single videos - simply search for your song of choice and click! If you are interested in booking a Xmas event with us, feel free to check
                         out two of our playlist hits, "Wonderful Christmastime" and "Silver Bells".
                     </p>
                 </div>
