Mobile first responsive tests are complete

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 <div class="music-table-text">
                     <h2>The Music</h2>
                     <p>We have compiled a small selection of our most loved hits from over the years. To watch our music single videos - simply search for your song of choice and click! If you are interested in booking a Xmas event with us, feel free to check
-                        out two of our playlist hits, "Wonderful Christmastime" and "Silver Bells".
+                        out two of our playlist hits, "Wonderful Christmastime" and "Silver Bells".  Stay in touch with all our latest 
+                        band news by following our Facebook, Twitter and YouTube pages!
                     </p>
                 </div>
                 <div class="music-table">
