--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" type="image/png" href="./assets/images/monkees-logo.png"/>
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/67768a2f6d.js"></script>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="reset.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <title>The Monkees | Official Fans Site</title>
 </head>
 
